//! This code was AUTOGENERATED using the codama library.
//! Please DO NOT EDIT THIS FILE, instead use visitors
//! to add features, then rerun codama to update it.
//!
//! <https://github.com/codama-idl/codama>
//!
syntax = "proto3";

package vixen.parser.vixen_meteora_vault_parser;

message InitializeIx {
	InitializeIxAccounts accounts = 1;
}

message EnableVaultIx {
	EnableVaultIxAccounts accounts = 1;
	EnableVaultIxData data = 2;
}

message SetOperatorIx {
	SetOperatorIxAccounts accounts = 1;
}

message InitializeStrategyIx {
	InitializeStrategyIxAccounts accounts = 1;
	InitializeStrategyIxData data = 2;
}

message RemoveStrategyIx {
	RemoveStrategyIxAccounts accounts = 1;
}

message RemoveStrategy2Ix {
	RemoveStrategy2IxAccounts accounts = 1;
	RemoveStrategy2IxData data = 2;
}

message CollectDustIx {
	CollectDustIxAccounts accounts = 1;
}

message AddStrategyIx {
	AddStrategyIxAccounts accounts = 1;
}

message DepositStrategyIx {
	DepositStrategyIxAccounts accounts = 1;
	DepositStrategyIxData data = 2;
}

message WithdrawStrategyIx {
	WithdrawStrategyIxAccounts accounts = 1;
	WithdrawStrategyIxData data = 2;
}

message Withdraw2Ix {
	Withdraw2IxAccounts accounts = 1;
	Withdraw2IxData data = 2;
}

message DepositIx {
	DepositIxAccounts accounts = 1;
	DepositIxData data = 2;
}

message WithdrawIx {
	WithdrawIxAccounts accounts = 1;
	WithdrawIxData data = 2;
}

message WithdrawDirectlyFromStrategyIx {
	WithdrawDirectlyFromStrategyIxAccounts accounts = 1;
	WithdrawDirectlyFromStrategyIxData data = 2;
}


message VaultBumps {
	uint32 vault_bump = 1;
	uint32 token_vault_bump = 2;
}

message LockedProfitTracker {
	uint64 last_updated_locked_profit = 1;
	uint64 last_report = 2;
	uint64 locked_profit_degradation = 3;
}

enum StrategyType {
	StrategyTypePortFinanceWithoutLM = 0;
	StrategyTypePortFinanceWithLM = 1;
	StrategyTypeSolendWithoutLM = 2;
	StrategyTypeMango = 3;
	StrategyTypeSolendWithLM = 4;
	StrategyTypeApricotWithoutLM = 5;
	StrategyTypeFrancium = 6;
	StrategyTypeTulip = 7;
	StrategyTypeVault = 8;
	StrategyTypeDrift = 9;
	StrategyTypeFrakt = 10;
	StrategyTypeMarginfi = 11;
}


message Vault {
	uint32 enabled = 1;
	VaultBumps bumps = 2;
	uint64 total_amount = 3;
	string token_vault = 4;
	string fee_vault = 5;
	string token_mint = 6;
	string lp_mint = 7;
	repeated string strategies = 8;
	string base = 9;
	string admin = 10;
	string operator = 11;
	LockedProfitTracker locked_profit_tracker = 12;
}

message Strategy {
	string reserve = 1;
	string collateral_vault = 2;
	StrategyType strategy_type = 3;
	uint64 current_liquidity = 4;
	repeated uint32 bumps = 5;
	string vault = 6;
	uint32 is_disable = 7;
}


message InitializeIxAccounts {
	string vault = 1;
	string payer = 2;
	string token_vault = 3;
	string token_mint = 4;
	string lp_mint = 5;
	string rent = 6;
	string token_program = 7;
	string system_program = 8;
}


message EnableVaultIxAccounts {
	string vault = 1;
	string admin = 2;
}

message EnableVaultIxData {
	uint32 enabled = 1;
}

message SetOperatorIxAccounts {
	string vault = 1;
	string operator = 2;
	string admin = 3;
}


message InitializeStrategyIxAccounts {
	string vault = 1;
	string strategy_program = 2;
	string strategy = 3;
	string reserve = 4;
	string collateral_vault = 5;
	string collateral_mint = 6;
	string admin = 7;
	string system_program = 8;
	string rent = 9;
	string token_program = 10;
}

message InitializeStrategyIxData {
	uint32 strategy_index = 1;
	repeated uint32 other_bumps = 2;
	StrategyType strategy_type = 3;
}

message RemoveStrategyIxAccounts {
	string vault = 1;
	string strategy = 2;
	string strategy_program = 3;
	string collateral_vault = 4;
	string reserve = 5;
	string token_vault = 6;
	string fee_vault = 7;
	string lp_mint = 8;
	string token_program = 9;
	string admin = 10;
}


message RemoveStrategy2IxAccounts {
	string vault = 1;
	string strategy = 2;
	string strategy_program = 3;
	string collateral_vault = 4;
	string reserve = 5;
	string token_vault = 6;
	string token_admin_advance_payment = 7;
	string token_vault_advance_payment = 8;
	string fee_vault = 9;
	string lp_mint = 10;
	string token_program = 11;
	string admin = 12;
}

message RemoveStrategy2IxData {
	uint64 max_admin_pay_amount = 1;
}

message CollectDustIxAccounts {
	string vault = 1;
	string token_vault = 2;
	string token_admin = 3;
	string admin = 4;
	string token_program = 5;
}


message AddStrategyIxAccounts {
	string vault = 1;
	string strategy = 2;
	string admin = 3;
}


message DepositStrategyIxAccounts {
	string vault = 1;
	string strategy = 2;
	string token_vault = 3;
	string fee_vault = 4;
	string lp_mint = 5;
	string strategy_program = 6;
	string collateral_vault = 7;
	string reserve = 8;
	string token_program = 9;
	string operator = 10;
}

message DepositStrategyIxData {
	uint64 amount = 1;
}

message WithdrawStrategyIxAccounts {
	string vault = 1;
	string strategy = 2;
	string token_vault = 3;
	string fee_vault = 4;
	string lp_mint = 5;
	string strategy_program = 6;
	string collateral_vault = 7;
	string reserve = 8;
	string token_program = 9;
	string operator = 10;
}

message WithdrawStrategyIxData {
	uint64 amount = 1;
}

message Withdraw2IxAccounts {
	string vault = 1;
	string token_vault = 2;
	string lp_mint = 3;
	string user_token = 4;
	string user_lp = 5;
	string user = 6;
	string token_program = 7;
}

message Withdraw2IxData {
	uint64 unmint_amount = 1;
	uint64 min_out_amount = 2;
}

message DepositIxAccounts {
	string vault = 1;
	string token_vault = 2;
	string lp_mint = 3;
	string user_token = 4;
	string user_lp = 5;
	string user = 6;
	string token_program = 7;
}

message DepositIxData {
	uint64 token_amount = 1;
	uint64 minimum_lp_token_amount = 2;
}

message WithdrawIxAccounts {
	string vault = 1;
	string token_vault = 2;
	string lp_mint = 3;
	string user_token = 4;
	string user_lp = 5;
	string user = 6;
	string token_program = 7;
}

message WithdrawIxData {
	uint64 unmint_amount = 1;
	uint64 min_out_amount = 2;
}

message WithdrawDirectlyFromStrategyIxAccounts {
	string vault = 1;
	string strategy = 2;
	string reserve = 3;
	string strategy_program = 4;
	string collateral_vault = 5;
	string token_vault = 6;
	string lp_mint = 7;
	string fee_vault = 8;
	string user_token = 9;
	string user_lp = 10;
	string user = 11;
	string token_program = 12;
}

message WithdrawDirectlyFromStrategyIxData {
	uint64 unmint_amount = 1;
	uint64 min_out_amount = 2;
}


message ProgramState {
    oneof state_oneof {
        	Vault vault = 1;
        	Strategy strategy = 2;
        }
}

message ProgramIxs {
    oneof ix_oneof {
        	InitializeIx initialize = 1;
        	EnableVaultIx enable_vault = 2;
        	SetOperatorIx set_operator = 3;
        	InitializeStrategyIx initialize_strategy = 4;
        	RemoveStrategyIx remove_strategy = 5;
        	RemoveStrategy2Ix remove_strategy2 = 6;
        	CollectDustIx collect_dust = 7;
        	AddStrategyIx add_strategy = 8;
        	DepositStrategyIx deposit_strategy = 9;
        	WithdrawStrategyIx withdraw_strategy = 10;
        	Withdraw2Ix withdraw2 = 11;
        	DepositIx deposit = 12;
        	WithdrawIx withdraw = 13;
        	WithdrawDirectlyFromStrategyIx withdraw_directly_from_strategy = 14;
        }
}

